# kailua-soon

./: .gitignore  Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: blobs.rs  config.rs  executor.rs  journal.rs  kona.rs  lib.rs  precondition.rs  witness.rs
crates/common/src/client/: core.rs  mod.rs  soon_test.rs  stateless.rs  stitching.rs
crates/common/src/client/soon_test/: derivation.rs  execution.rs  mod.rs  providers.rs
crates/common/src/oracle/: mod.rs  offline.rs
crates/common/src/rkyv/: execution.rs
crates/common/src/test/: mock.rs  mod.rs  oracle.rs
