[workspace.package]
version = "1.0.0-rc.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
authors = ["hashcashier"]
homepage = "https://risc0.github.io/kailua/"
repository = "https://github.com/risc0/kailua"
keywords = ["zkvm", "ethereum", "optimism", "fault", "proof"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[workspace]
resolver = "2"
members = ["bin/*", "build/*", "crates/*"]

[workspace.dependencies]
anyhow = "1.0.98"
async-channel = "2.3.1"
async-trait = "0.1.88"
aws-config = "1.5.15"
aws-sdk-kms = "1.58.0"
bincode = "1.3.3"
bytemuck = "1.12"
c-kzg = "=2.1.1"
clap = { version = "4.5.21", features = ["derive", "env"] }
copy_dir = "0.1.3"
foundry-compilers = "0.11.0"
futures = "0.3.31"
gcloud-sdk = { version = "0.27.0", features = ["google-cloud-kms-v1"] }
hashbrown = { version = "0.15.0", features = ["rayon"] }
hex = "0.4.3"
human_bytes = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
paste = "1.0.15"
pot = "3.0.1"
rayon = "1.10.0"
reqwest = "0.12.12"
rkyv = { version = "0.8.9", features = ["hashbrown-0_15", "std"] }
rocksdb = "0.23.0"
semver = "1.0.23"
serde = { version = "1.0", features = ["derive", "alloc", "std"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
spin = { version = "0.10.0", features = ["mutex"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
threadpool = "1.8.1"
tokio = { version = "1.39.1", features = ["full"] }
tokio-retry = "0.3.0"
url = "2.5.4"

# Telemetry
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry-prometheus = "0.27.0"
opentelemetry-zipkin = "0.27.0"
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Alloy
alloy = { version = "0.15.6", default-features = false, features = ["json"] }
alloy-chains = "0.2.0"
alloy-consensus = { version = "0.15.6", default-features = false, features = [
    "serde",
] }
alloy-eips = { version = "0.15.6", default-features = false, features = [
    "kzg",
] }
alloy-evm = { version = "0.6.0", default-features = false, features = ["op"] }
alloy-op-evm = { version = "0.6.0", default-features = false }
alloy-provider = { version = "0.15.6" }
alloy-rlp = "0.3.11"
alloy-primitives = { version = "1.1.0", default-features = false, features = [
    "map-hashbrown",
] }
alloy-rpc-types-beacon = "0.15.6"
alloy-rpc-types-engine = { version = "0.15.6", default-features = false }
alloy-sol-types = { version = "1.0.0", features = ["json"] }

# OP Alloy
op-alloy-consensus = { version = "0.15.1", default-features = false, features = [
    "serde",
] }
op-alloy-rpc-types-engine = { version = "0.15.1", default-features = false, features = [
    "serde",
] }

# Kailua
kailua-build = { path = "build/risczero" }
kailua-client = { path = "bin/client" }
kailua-common = { path = "crates/common" }
kailua-contracts = { path = "crates/contracts" }
kailua-host = { path = "bin/host" }

# Kona git = "https://github.com/op-rs/kona", tag = "kona-client/v1.0.1"
kona-cli = { path = "../kona/crates/utilities/cli", default-features = false }
kona-client = { path = "../kona/bin/client", default-features = false }
soon-derive = { path = '../soon/node/derive' }
kona-driver = { path = "../kona/crates/protocol/driver" }
kona-executor = { path = "../kona/crates/proof/executor" }
kona-host = { path = "../kona/bin/host", default-features = false, features = [
    "single",
] }
kona-mpt = { path = "../kona/crates/proof/mpt", features = [
    "serde",
] }
kona-preimage = { path = "../kona/crates/proof/preimage", features = [
    "serde",
    "rkyv",
    "std",
] }
kona-proof = { path = "../kona/crates/proof/proof" }
kona-std-fpvm = { path = "../kona/crates/proof/std-fpvm" }

# Bonsai
bonsai-sdk = { version = "1.4.0", features = ["non_blocking"] }

# RISC Zero
risc0-build = { version = "2.1.2", features = ["unstable"] }
risc0-ethereum-contracts = "2.1.0"
risc0-zkvm = { version = "2.1.0", features = [
    "heap-embedded-alloc",
    "unstable",
] }

# Boundless
boundless-market = "0.11.0"

[profile.dev]
opt-level = 3


[profile.release]
codegen-units = 1
debug = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
opt-level = 3

[patch.crates-io]
# Core Solana packages that definitely exist in soonlabs/agave
solana-program = { git = "https://github.com/soonlabs/agave", branch = "upgrade_curve25519" }
solana-sdk = { git = "https://github.com/soonlabs/agave", branch = "upgrade_curve25519" }
solana-account-decoder = { git = "https://github.com/soonlabs/agave", branch = "upgrade_curve25519" }

# Critical patch to resolve SPL package dependencies with our custom Solana version
# This prevents duplicate versions of solana-program and solana-zk-token-sdk
solana-zk-token-sdk = { git = "https://github.com/soonlabs/agave", branch = "upgrade_curve25519" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/SVM-L2-temp/curve25519-dalek.git"
branch = "dep"

