[package]
name = "kailua-common"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
c-kzg.workspace = true
lazy_static.workspace = true
pot.workspace = true
rkyv.workspace = true
spin.workspace = true
hex.workspace = true

# Test feature dependencies
copy_dir = { workspace = true, optional = true }
kona-host = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-rlp.workspace = true
alloy-op-evm.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-rpc-types-engine.workspace = true

op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true

kona-driver.workspace = true
kona-executor.workspace = true
kona-mpt.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true
fraud-executor.workspace = true
bincode.workspace = true

risc0-zkvm.workspace = true

serde.workspace = true
tracing.workspace = true

#SOON
soon-primitives.workspace = true
soon-derive.workspace = true

# for testing
soon-node = { workspace = true, optional = true }
soon-storage = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
l1-block-info = { workspace = true, optional = true }
bridge = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
crossbeam-channel = { workspace = true, optional = true }

[dev-dependencies]
copy_dir.workspace = true
kona-cli.workspace = true
kona-host.workspace = true
rayon.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
kailua-build.workspace = true
bonsai-sdk.workspace = true

[features]
default = []
offline = ["kona-host", "copy_dir", "tokio"]
__test = [
	"offline",
	"tempfile",
	"soon-node/__test",
	"soon-storage",
	"solana-sdk",
	"l1-block-info",
	"bridge",
	"spl-token",
	"crossbeam-channel",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(coverage,coverage_nightly)',
] }

# Examples
[[example]]
name = "test_witness_extractor"
path = "examples/test_witness_extractor.rs"

[[example]]
name = "risc_zero_verify"
path = "examples/risc_zero_verify.rs"
